--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://elbica.github.io/cheffi-landing/",
+  "homepage": ".",
   "name": "simple-light-react",
   "version": "0.1.0",
   "private": true,
