--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://elbica.github.io/cheffi-landing/",
+  "homepage": "https://cheffi.cf",
   "name": "simple-light-react",
   "version": "0.1.0",
   "private": true,
@@ -28,7 +28,7 @@
     "build": "craco build",
     "test": "craco test",
     "eject": "craco eject",
-    "predeploy": "npm run build",
+    "predeploy": "npm run build && cp CNAME ./build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
