--- a/manifest.json
+++ b/manifest.json
@@ -3,17 +3,17 @@
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "titleLogo.png",
+      "src": "titleLogo.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "titleLogo.png",
+      "src": "titleLogo.ico",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "titleLogo.png",
+      "src": "titleLogo.ico",
       "type": "image/png",
       "sizes": "512x512"
     }
